--- a/blog_app/templates/account.html
+++ b/blog_app/templates/account.html
@@ -9,7 +9,7 @@
             </div>
         </div>
     
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
             {{ form.hidden_tag() }} <!--CSRF Koruması için-->
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Account Info</legend>
@@ -41,6 +41,16 @@
                         </div>
                     {% else %}
                         {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.picture.label() }}
+                    {{ form.picture(class="form-control-file") }}
+                    {% if form.picture.errors %}
+                        {% for error in form.picture.errors %}
+                            <span class="text-danger"> {{ error }} </span>
+                            <br>
+                        {% endfor %}
                     {% endif %}
                 </div>
             </fieldset>
